 * Lua API:
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
 * Graphics:
   * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
   * Fixed bug #22045: Only blit neutral surfaces.
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich
   * Add 'elemental' trait to mudcrawler line
   * Fix sound timings for drake fire animation macros
 * User interface:
   * Classic Theme which restores the 1.10 UI.
   * Made orb and minmap colors configurable by the game preferences.
   * Remove 'allow_new_game=no' entries from random map new game list
   * Fixed bug #22095: An assertion failure in the gamestate inspector.
   * Changed: A listbox can now update its size when rows are added.
   * Changed: Avoid listboxes to handle mouse clicks twice.
   * Fixed bug #22144 + #22046: An assertion failure with empty labels in
     a listbox.
   * The :inspect dialog now uses the same function as saved games to generate
     WML in text form instead of a simplified version.
   * Added a button to copy the currently displayed content from the :inspect
     dialog to clipboard.
   * Added a button to copy the in-game Chat Log dialog contents to clipboard.
   * Fixed the WML load error dialog not displaying an add-on name instead of
     falling back to its directory name if the add-on contains an outdated
     _info.cfg file lacking an [info]title= value.
   * Fixed most of the minimap buttons and the End Turn button appearing
     without contents or in the wrong state during WML start events until they
     are interacted with or control is given to the player for the first time.